content/_generated-doc/2.7/config/quarkus-gcp-functions.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-gcp-functions_configuration]]link:#quarkus-gcp-functions_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-gcp-functions_quarkus.google-cloud-functions.function]]`link:#quarkus-gcp-functions_quarkus.google-cloud-functions.function[quarkus.google-cloud-functions.function]`

[.description]
--
The function name. Function names are specified on function classes using the `@javax.inject.Named` annotation. If this name is unspecified and there is exactly one unnamed function then this unnamed function will be used. If there is only a single named function and the name is unspecified then the named function will be used. These rules apply for each function implementation (HttpFunction, BackgroundFunction, RawBackgroundFunction).
--|string 
|

|===